--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
     "firebase": "^7.3.0",
+    "ionic4-rating": "^1.0.9",
     "promise-polyfill": "^8.1.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
